adl-backend/src/test/resources/functional/error/helloworldSplitImpl/HelloworldApplication.adl
composite error.helloworldSplitImpl.HelloworldApplication 
    extends GenericApplication<Helloworld> {
}